--- a/server/public/index.html
+++ b/server/public/index.html
@@ -33,5 +33,15 @@
         </thead>
         <tbody id="songTableBody"></tbody>
     </table>
+    <h2>Famous Jazz Albums</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Album</th>
+                <th>Year</th>
+            </tr>
+        </thead>
+        <tbody id="titleTableBody"></tbody>
+    </table>
 </body>
 </html>
